[package]
edition = "2021"

name = "vsmtp-rule-engine"
version = "1.3.3"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-rule-engine/"

readme = "../../../README.md"
keywords = [
  "vsmtp",
  "scripting-engine",
  "scripting-language",
  "scripting",
  "rhai",
]
categories = ["config"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", search = "vsmtp-common = \\{ path = \"../vsmtp-common\", version = .*", replace = "vsmtp-common = { path = \"../vsmtp-common\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-config = \\{ path = \"../vsmtp-config\", version = .*", replace = "vsmtp-config = { path = \"../vsmtp-config\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp-mail-parser\", version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp-mail-parser\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-auth = \\{ path = \"../vsmtp-auth\", version = .*", replace = "vsmtp-auth = { path = \"../vsmtp-auth\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vqueue = \\{ path = \"../../vqueue\", version = .*", replace = "vqueue = { path = \"../../vqueue\", version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-plugins = { path = "../vsmtp-plugins", version = "1.3.0" }
vsmtp-common = { path = "../vsmtp-common", version = "1.3.3" }
vsmtp-config = { path = "../vsmtp-config", version = "1.3.3" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "1.3.3" }
vsmtp-auth = { path = "../vsmtp-auth", version = "1.3.3" }
vqueue = { path = "../../vqueue", version = "1.3.3" }

tracing = { version = "0.1.36", default-features = false, features = [
  "std",
  "attributes",
] }
anyhow = { version = "1.0.65", default-features = false, features = ["std"] }

thiserror = { version = "1.0.37", default-features = false }

regex = { version = "1.6.0", default-features = false, features = [
  "std",
  "perf",
  "unicode",
] }
iprange = { version = "0.6.7", default-features = false, features = [
  # "serde" # TODO
] }
ipnet = { version = "2.5.0", default-features = false, features = [
  # "serde", # TODO
] }
addr = { version = "0.15.6", default-features = false, features = [
  "std",
  # "serde", # TODO
] }
either = { version = "1.8.0", default-features = false, features = ["use_std"] }

log = { version = "0.4.17", default-features = false, features = ["std"] }

serde_json = { version = "1.0.85", default-features = false, features = [
  "std",
] }
serde = { version = "1.0.145", default-features = false, features = [
  "std",
  "derive",
] }
lettre = { version = "0.10.0", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "pool",
] }
strum = { version = "0.24.1", default-features = false, features = [
  "std",
  "derive",
] }

rhai = { version = "1.10.1", git = "https://github.com/schungx/rhai", features = [
  "unchecked",
  "sync",
  "internals",
  "no_closure",
  "metadata",
] }


wait-timeout = { version = "0.2.0", default-features = false }
users = { version = "0.11.0", default-features = false }

hostname = { version = "0.3.1", default-features = false }
time = { version = "0.3.14", default-features = false, features = [
  "std",
  "formatting",
  "macros",
] }

trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "system-config",
  "tokio-runtime",
] }

tokio = { version = "1.21.2", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }
humantime-serde = { version = "1.1.1", default-features = false }

[package.metadata.cargo-udeps.ignore]
normal = ["r2d2"]

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
pretty_assertions = "1.3.0"
