[package]
edition = "2021"

name = "vsmtp-rule-engine"
version = "1.4.0-rc.0"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-rule-engine/"

keywords = [
  "vsmtp",
  "scripting-engine",
  "scripting-language",
  "scripting",
  "rhai",
]
categories = ["config"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", search = "vsmtp-common = \\{ path = \"../vsmtp-common\", version = .*", replace = "vsmtp-common = { path = \"../vsmtp-common\", version = \"={{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-config = \\{ path = \"../vsmtp-config\", version = .*", replace = "vsmtp-config = { path = \"../vsmtp-config\", version = \"={{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp-mail-parser\", version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp-mail-parser\", version = \"={{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-auth = \\{ path = \"../vsmtp-auth\", version = .*", replace = "vsmtp-auth = { path = \"../vsmtp-auth\", version = \"={{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vqueue = \\{ path = \"../../vqueue\", version = .*", replace = "vqueue = { path = \"../../vqueue\", version = \"={{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "=1.4.0-rc.0" }
vsmtp-config = { path = "../vsmtp-config", version = "=1.4.0-rc.0" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "=1.4.0-rc.0" }
vsmtp-auth = { path = "../vsmtp-auth", version = "=1.4.0-rc.0" }
vqueue = { path = "../../vqueue", version = "=1.4.0-rc.0" }

# Plugins
vsmtp-plugin-vsl = { path = "../plugins/vsmtp-plugin-vsl", version = "1.4.0-rc.0" }
rhai-dylib = { version = "0.1.4", features = ["sync"] }
rhai = { version = "1.11.0", features = [
  "unchecked",
  "sync",
  "internals",
  "no_closure",
  "metadata",
] }
tracing = { version = "0.1.37", default-features = false, features = [
  "std",
  "attributes",
  "release_max_level_info",
] }

anyhow = { version = "1.0.66", default-features = false, features = ["std"] }

thiserror = { version = "1.0.37", default-features = false }

either = { version = "1.8.0", default-features = false, features = ["use_std"] }

strum = { version = "0.24.1", default-features = false, features = [
  "std",
  "derive",
] }


serde_json = { version = "1.0.89", default-features = false, features = [
  "std",
] }
serde = { version = "1.0.147", default-features = false, features = [
  "std",
  "derive",
] }
lettre = { version = "0.10.0", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "pool",
] }

wait-timeout = { version = "0.2.0", default-features = false }
users = { version = "0.11.0", default-features = false }

hostname = { version = "0.3.1", default-features = false }
time = { version = "0.3.17", default-features = false, features = [
  "std",
  "formatting",
  "macros",
] }

trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "system-config",
  "tokio-runtime",
] }

tokio = { version = "1.22.0", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }
humantime-serde = { version = "1.1.1", default-features = false }

[features]
default = ["delegation"]
delegation = []          # Add the delegation system.

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
pretty_assertions = "1.3.0"
rstest = "0.15.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = { version = "0.6.1", default-features = false, features = [
  "std",
  "pem",
  # "serde" # TODO
] }
