[package]
edition = "2021"

name = "vsmtp-rule-engine"
version = "2.1.0"
license = "GPL-3.0-only"

rust-version = "1.66.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-rule-engine/"

keywords = ["vsmtp", "scripting-engine", "scripting-language", "scripting", "rhai"]
categories = ["config"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", prerelease = true, search = "common\\]\nversion = .*", replace = "common]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "config\\]\nversion = .*", replace = "config]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "auth\\]\nversion = .*", replace = "auth]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "mail-parser\\]\nversion = .*", replace = "mail-parser]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "vqueue\\]\nversion = .*", replace = "vqueue]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "plugin-vsl\\]\nversion = .*", replace = "plugin-vsl]\nversion = \"={{version}}\"" },
]

[dependencies.vsmtp-common]
version = "=2.1.0"
path = "../vsmtp-common"

[dependencies.vsmtp-config]
version = "=2.1.0"
path = "../vsmtp-config"

[dependencies.vsmtp-mail-parser]
version = "=2.1.0"
path = "../vsmtp-mail-parser"

[dependencies.vsmtp-auth]
version = "=2.1.0"
path = "../vsmtp-auth"

[dependencies.vqueue]
version = "=2.1.0"
path = "../../vqueue"

[dependencies.vsmtp-plugin-vsl]
version = "=2.1.0"
path = "../vsmtp-plugin-vsl"

[dependencies]
rhai-dylib = { version = "0.1.4", features = ["sync"] }
rhai = { version = "1.12.0", features = ["unchecked", "sync", "internals", "no_closure", "metadata"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes", "release_max_level_info"] }

anyhow = { version = "1.0.69", default-features = false, features = ["std"] }

thiserror = { version = "1.0.38", default-features = false }

either = { version = "1.8.1", default-features = false, features = ["use_std"] }

strum = { version = "0.24.1", default-features = false, features = ["std", "derive"] }
serde_with = { version = "2.2.0", default-features = false, features = ["std", "macros"] }


serde_json = { version = "1.0.92", default-features = false, features = ["std"] }
serde = { version = "1.0.152", default-features = false, features = ["std", "derive"] }
lettre = { version = "0.10.2", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "pool",
] }

wait-timeout = { version = "0.2.0", default-features = false }
users = { version = "0.11.0", default-features = false }

time = { version = "0.3.17", default-features = false, features = ["std", "formatting", "macros"] }

trust-dns-resolver = { version = "0.22.0", default-features = false, features = ["system-config", "tokio-runtime"] }

tokio = { version = "1.25.0", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }
humantime-serde = { version = "1.1.1", default-features = false }

uuid = { version = "1.3.0", default-features = false, features = ["std", "v4", "fast-rng"] }

[features]
default = ["delegation"]
delegation = []          # Add the delegation system.

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
pretty_assertions = "1.3.0"
rstest = "0.16.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = { version = "0.8.1", default-features = false, features = [
  "std",
  "pem",
  # "serde" # TODO
] }
tempfile = { version = "3.2.0", optional = false, default-features = false }
