[package]
edition = "2021"

name = "vsmtp-server"
version = "1.3.0-rc.1"
license = "GPL-3.0-only"

rust-version = "1.60"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-server/"

readme = "../../../README.md"
keywords = ["vsmtp", "email", "server", "mail-server", "mail-filter"]
categories = ["network-programming"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", search = "vsmtp-common = \\{ path = \"../vsmtp-common\", version = .*", replace = "vsmtp-common = { path = \"../vsmtp-common\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-config = \\{ path = \"../vsmtp-config\", version = .*", replace = "vsmtp-config = { path = \"../vsmtp-config\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-rule-engine = \\{ path = \"../vsmtp-rule-engine\", version = .*", replace = "vsmtp-rule-engine = { path = \"../vsmtp-rule-engine\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp-mail-parser\", version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp-mail-parser\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-delivery = \\{ path = \"../vsmtp-delivery\", version = .*", replace = "vsmtp-delivery = { path = \"../vsmtp-delivery\", version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.3.0-rc.1" }
vsmtp-config = { path = "../vsmtp-config", version = "1.3.0-rc.1" }
vsmtp-rule-engine = { path = "../vsmtp-rule-engine", version = "1.3.0-rc.1" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "1.3.0-rc.1" }
vsmtp-delivery = { path = "../vsmtp-delivery", version = "1.3.0-rc.1" }

tracing = "0.1.36"

async-trait = "0.1.57"
fastrand = "1.8.0"
thiserror = "1.0.32"

tokio-stream = "0.1.9"
async-stream = "0.3.3"
futures = "0.3.24"

signal-hook = "0.3.14"

trust-dns-resolver = { version = "0.21.2", default-features = false }
time = { version = "0.3.14", default-features = false, features = [
  "std",
  "formatting",
  "macros",
] }

tokio-rustls = "0.23.4"

rsasl = { version = "2.0.0-rc.1", features = ["provider"] }

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
pretty_assertions = "1.3.0"

## Benchmark
criterion = { version = "0.3.6", features = ["async_tokio", "html_reports"] }
iai = "0.1.1"
rand = "0.8.5"

lettre = { version = "0.10.0", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }

[[bench]]
name = "receiver2"
harness = false

[[bench]]
name = "iai_receiver"
harness = false
path = "benches/iai/receiver.rs"
