[package]
edition = "2021"

name = "vsmtp-server"
version = "1.3.0"
license = "GPL-3.0-only"

rust-version = "1.62.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-server/"

readme = "../../../README.md"
keywords = ["vsmtp", "email", "server", "mail-server", "mail-filter"]
categories = ["network-programming"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", search = "vsmtp-common = \\{ path = \"../vsmtp-common\", version = .*", replace = "vsmtp-common = { path = \"../vsmtp-common\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-config = \\{ path = \"../vsmtp-config\", version = .*", replace = "vsmtp-config = { path = \"../vsmtp-config\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-rule-engine = \\{ path = \"../vsmtp-rule-engine\", version = .*", replace = "vsmtp-rule-engine = { path = \"../vsmtp-rule-engine\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp-mail-parser\", version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp-mail-parser\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-delivery = \\{ path = \"../vsmtp-delivery\", version = .*", replace = "vsmtp-delivery = { path = \"../vsmtp-delivery\", version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.3.0" }
vsmtp-config = { path = "../vsmtp-config", version = "1.3.0" }
vsmtp-rule-engine = { path = "../vsmtp-rule-engine", version = "1.3.0" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "1.3.0" }
vsmtp-delivery = { path = "../vsmtp-delivery", version = "1.3.0" }
vqueue = { path = "../../vqueue", version = "1.3.0" }

tracing = { version = "0.1.36", default-features = false, features = ["std"] }

async-trait = { version = "0.1.57", default-features = false }
fastrand = { version = "1.8.0", default-features = false }
thiserror = { version = "1.0.35", default-features = false }
strum = { version = "0.24.1", default-features = false, features = [
  "std",
  "derive",
] }
anyhow = { version = "1.0.65", default-features = false, features = ["std"] }

log = { version = "0.4.17", default-features = false, features = ["std"] }
either = { version = "1.8.0", default-features = false, features = [
  "use_std",
  "serde",
] }

tokio-stream = { version = "0.1.10", default-features = false }
async-stream = { version = "0.3.3", default-features = false }

futures-util = { version = "0.3.24", default-features = false, features = [
  "async-await",
] }

signal-hook = { version = "0.3.14", default-features = false, features = [
  "iterator",
] }

trust-dns-resolver = { version = "0.21.2", default-features = false }
time = { version = "0.3.14", default-features = false, features = [
  "std",
  "formatting",
  "macros",
] }
lettre = { version = "0.10.0", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "pool",
] }
tokio = { version = "1.21.1", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }

tokio-rustls = { version = "0.23.4", default-features = false, features = [
  "logging",
  "tls12",
] }
base64 = { version = "0.13.0", default-features = false }
rsasl = { version = "2.0.0-rc.1", default-features = false, features = [
  "provider",
  "config_builder",
  "registry_static",
  # "scram-sha-1",
  # "scram-sha-2",
  "anonymous",
  # "external",
  # "xoauth2",
  "plain",
  "login",
] }

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
pretty_assertions = "1.3.0"

## Benchmark
criterion = { version = "0.4.0", features = ["async_tokio", "html_reports"] }
iai = "0.1.1"
rand = "0.8.5"

lettre = { version = "0.10.0", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }

[[bench]]
name = "receiver2"
harness = false

[[bench]]
name = "iai_receiver"
harness = false
path = "benches/iai/receiver.rs"
