[package]
edition = "2021"

name = "vsmtp-test"
version = "1.3.4"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { path = "../vsmtp-common" }
vsmtp-config = { path = "../vsmtp-config" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser" }
vsmtp-rule-engine = { path = "../vsmtp-rule-engine" }
vsmtp-server = { path = "../vsmtp-server" }
vqueue = { path = "../../vqueue", features = ["testing"] }

async-trait = "0.1.58"
lettre = { version = "0.10.1", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }

trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "system-config",
  "serde-config",
  "tokio-runtime",
] }

tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"

lazy_static = "1.4.0"

rsasl = { version = "=2.0.0-rc.3", default-features = false, features = [
  "provider",
  "config_builder",
  # "registry_static",
  # "scram-sha-1",
  # "scram-sha-2",
  "anonymous",
  # "external",
  # "xoauth2",
  "plain",
  "login",
] }
anyhow = "1.0.65"

serde_json = "1.0.86"

tokio = { version = "1.21.2", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }
base64 = { version = "0.13.1", default-features = false, features = ["std"] }

[dev-dependencies]
function_name = "0.3.0"
pretty_assertions = "1.3.0"
rstest = "0.15.0"
# rstest_reuse = "0.4.0"
