[package]
edition = "2021"

name = "vsmtp-test"
version = "2.0.1-rc.1"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { path = "../vsmtp-common" }
vsmtp-config = { path = "../vsmtp-config" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser" }
vsmtp-rule-engine = { path = "../vsmtp-rule-engine" }
vsmtp-server = { path = "../vsmtp-server" }
vqueue = { path = "../../vqueue", features = ["testing"] }
vsmtp-protocol = { path = "../vsmtp-protocol" }

async-trait = "0.1.62"
lettre = { version = "0.10.1", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }
time = { version = "0.3.15", default-features = false, features = ["std", "formatting", "macros", "serde-well-known"] }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "system-config",
  "serde-config",
  "tokio-runtime",
] }

tokio-rustls = "0.23.4"
rustls-pemfile = { version = "1.0.2", default-features = false }
rand = "0.8.5"

lazy_static = "1.4.0-rc.7"

rsasl = { version = "=2.0.0-rc.4", default-features = false, features = [
  "provider",
  "config_builder",
  # "registry_static",
  # "scram-sha-1",
  # "scram-sha-2",
  "anonymous",
  # "external",
  # "xoauth2",
  "plain",
  "login",
] }
anyhow = "1.0.68"

serde_json = "1.0.91"

tokio = { version = "1.24.1", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }
tokio-stream = { version = "0.1.11", default-features = false, features = ["time"] }

base64 = { version = "0.21.0", default-features = false, features = ["std"] }

tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }

uuid = { version = "1.2.2", default-features = false, features = ["std", "v4", "fast-rng"] }


[dev-dependencies]
function_name = "0.3.0"
pretty_assertions = "1.3.0"
rstest = "0.16.0"
# rstest_reuse = "0.4.0"
test-log = { version = "0.2.11", features = ["trace"] }
env_logger = "0.10.0"
